# AgenticDiscordBot

./: .env.example  bot_util.py  main.py  pydantic_test.py  pyproject.toml
agents/: search_agent.py
cogs/: simple_agent.py  test.py
